[project]
name = "pgd-attack"
version = "0.1.0"
description = "Projected Gradient Descent attack on language models"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "tiktoken>=0.5.0",
    "protobuf>=4.0.0",
    "sentencepiece>=0.1.99",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]
